# Cycle-safe-Referral-Engine

./: .gitignore  AGENT.md  PROGRESS.md
backend/: .dockerignore  Dockerfile  HANDOVER.md  alembic.ini  architecture.md  docker-compose.yml  pyproject.toml
backend/infra/postgres/: init.sql
backend/migrations/: env.py
backend/migrations/versions/: 1fdca179d2d3_initial_schema.py
backend/scripts/: create_tables.py  seed.py
backend/src/csre/: main.py  worker.py
backend/src/csre/api/: HANDOVER.md  __init__.py  router.py
backend/src/csre/api/v1/: HANDOVER.md
backend/src/csre/core/: HANDOVER.md  __init__.py  config.py  exception_handlers.py  exceptions.py  logging.py  security.py
backend/src/csre/db/: HANDOVER.md  __init__.py  models.py  neo4j.py  postgres.py  redis.py
backend/src/csre/modules/: HANDOVER.md  __init__.py
backend/src/csre/modules/dashboard/: HANDOVER.md  __init__.py  repository.py  schemas.py  service.py
backend/src/csre/modules/fraud/: HANDOVER.md  __init__.py  repository.py  schemas.py  service.py
backend/src/csre/modules/referral/: HANDOVER.md  __init__.py  repository.py  schemas.py  service.py
backend/src/csre/modules/reward/: HANDOVER.md  __init__.py  repository.py  schemas.py  service.py
backend/src/csre/modules/user/: HANDOVER.md  __init__.py  repository.py  schemas.py  (+1 more)
backend/src/csre/observability/: HANDOVER.md  __init__.py  metrics.py
backend/src/csre/schemas/: HANDOVER.md  envelope.py
backend/src/csre/tasks/: HANDOVER.md  reconciliation.py  rewards.py
backend/tests/: conftest.py  test_health.py  test_user_module.py
(+28 files in other folders)
